<resources xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Dictionary Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_heading_wordbook">Dictionary Pro</string>
    <string name="nav_drawer_row_browse_wordbook">Browse</string>
    <string name="nav_drawer_row_favorites">Favorites</string>
    <string name="nav_drawer_row_history">History</string>
    <string name="nav_drawer_heading_grammar">Sub Dic</string>
    <string name="nav_drawer_row_browse_grammar">Browse</string>
    <string name="nav_drawer_row_bookmarks">Bookmarks</string>
    <string name="search_hint">Search Dictionary</string>
    <string name="search_description">Dictionary entries</string>
    <string name="search">Search</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_feedback">Send feedback</string>
    <string name="title_wordbook">Dictionary</string>
    <string name="title_subdict">Sub Dic</string>
    <string name="title_wordbook_browse">Browse</string>
    <string name="title_wordbook_favorites">Favorites</string>
    <string name="title_wordbook_history">History</string>
    <string name="title_subdict_browse">Browse</string>
    <string name="title_subdict_bookmarks">Bookmarks</string>
    <string name="toast_clear_history">History cleared.</string>
    <string name="action_add_favorite">Add to favorites</string>
    <string name="action_sound">Sound</string>
    <string name="action_remove_favorite">Remove from favorites</string>
    <string name="toast_search_no_results">No results.</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_remove_bookmark">Remove bookmark</string>
    <string name="action_help">Help</string>
    <string name="action_clear_favorites">Clear favorites</string>
    <string name="action_clear_bookmarks">Clear bookmarks</string>
    <string name="feedback_email">codebhak@yahoo.com</string>
    <string name="feedback_subject">Dictionary Pro feedback</string>
    <string name="feedback_intent_chooser">Send feedback via</string>
    <string name="toast_clear_wordbook_favorites">Favorites cleared.</string>
    <string name="clear_wordbook_favorites_dialog_message">Are you sure you want to permanently clear your favorites list?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_subdict_bookmarks_dialog_message">Are you sure you want to permanently clear your bookmarks list?</string>
    <string name="toast_clear_subdict_bookmarks">Bookmarks cleared.</string>
    <string name="toast_favorite_added">Favorite added.</string>
    <string name="toast_favorite_removed">Favorite removed.</string>
    <string name="toast_bookmark_added">Bookmark added.</string>
    <string name="toast_bookmark_removed">Bookmark removed.</string>
    <string name="wordbook_favorites_empty_view">
        Tap the Add to Favorites icon to save your favorite words to this list.
    </string>
    <string name="wordbook_history_empty_view">Your history is empty.</string>
    <string name="subdict_bookmarks_empty_view">
        Tap the Bookmark icon to save your favorite sections to this list.
    </string>
    <string name="title_help">Help</string>
    <string name="message_help">
<![CDATA[
        <p>
            The  app documentation clearly explains about using and running the app.
        </p>
        </p>
        ]]>
    </string>
    <string name="title_about">About</string>
    <string name="message_about">
<![CDATA[
        <p>
            Dictionary Pro App is built by CodeBhak. It is a professional dictionary application
            with AdMob monetization. The application code can run on Android Studio. The app is
            tested for bug-free running on various devices.
        </p>
        ]]>
    </string>
    <string name="subdict_footer">
<![CDATA[
        <p></p>
        ]]>
    </string>
    <string name="settings">Settings</string>
</resources>