<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_bookmark"
        android:title="@string/action_add_bookmark"
        android:icon="@drawable/ic_bookmark_outline_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_remove_bookmark"
        android:title="@string/action_remove_bookmark"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>
</menu>
